Refacto de main + controller + service
