# internal/controllers/users/delete_user.go
@@ -4,18 +4,25 @@ import (
 	"encoding/json"
 	"github.com/gofrs/uuid"
 	"github.com/sirupsen/logrus"
-	"middleware/example/internal/models"
-	"middleware/example/internal/repositories/users"
+	"middleware/user/internal/models"
+	"middleware/user/internal/repositories/users"
 	"net/http"
 )
 
+// DeleteUser
+// @Tags 		users
+// @Summary 	Delete a user
+// @Description Delete the user with the specified ID
+// @Param 		id path string true "User UUID formatted ID"
+// @Success 	204 "No Content"
+// @Failure 	400 {string} string "Requête incorrecte - Données utilisateur invalides"
+// @Failure 	500 {object} models.CustomError "Internal Server Error"
+// @Router 		/users/{id} [delete]
 func DeleteUser(w http.ResponseWriter, r *http.Request) {
-	
 	ctx := r.Context()
 	userId, _ := ctx.Value("userId").(uuid.UUID)
 
 	err := users.DeleteUser(userId)
-
 	if err != nil {
 		logrus.Errorf("error : %s", err.Error())
 		customError, isCustom := err.(*models.CustomError)
@@ -32,4 +39,3 @@ func DeleteUser(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNoContent)
 	return
 }
-
