# internal/controllers/users/get_user.go
@@ -4,18 +4,25 @@ import (
 	"encoding/json"
 	"github.com/gofrs/uuid"
 	"github.com/sirupsen/logrus"
-	"middleware/example/internal/models"
-	"middleware/example/internal/repositories/users"
+	"middleware/user/internal/models"
+	"middleware/user/internal/repositories/users"
 	"net/http"
 )
 
-
+// GetUser
+// @Tags         users
+// @Summary      Get a user.
+// @Description  Get a user.
+// @Param        id           	path      string  true  "User UUID formatted ID"
+// @Success      200            {object}  models.User
+// @Failure 	 400 {string} 	string "Requête incorrecte - Données utilisateur invalides"
+// @Failure      500            "Something went wrong"
+// @Router       /users/{id} [get]
 func GetUser(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	userId, _ := ctx.Value("userId").(uuid.UUID)
 
 	user, err := users.GetUserById(userId)
-	
 	if err != nil {
 		logrus.Errorf("error : %s", err.Error())
 		customError, isCustom := err.(*models.CustomError)
